--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
   <main>
     <h2>Contact</h2>
-    <p>📞 Telefon: <a href="tel:+40712345678">+40 712 345 678</a></p>
+    <p>📞 Telefon: <a href="tel:+40728242862">+40 728242862</a></p>
     <p>📍 Sibiu</p>
        <p>🎵 TikTok:  
       <a href="https://www.tiktok.com/@exiprodetailingsibiu?_t=ZN-8yAeOU1zXk6&_r=1" target="_blank" style="color: #1DA1F2;">
