--- a/pachete.html
+++ b/pachete.html
@@ -22,7 +22,7 @@
                                           bord + fete de ușă + praguri ,
                                           mochete ,
                                           geamuri + parpriz + lunetă ,
-                                          pedalier ,
+                                          pedalier , igienizare instalație climă (ozonificare)
                                           Scaunele se dau jos doar la cererea clientului.</p>
     <p><strong>Exterior – protecție ceramică
   </main>
