--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
   <main>
     <h2>Prezentare</h2>
     <p>Bine ai venit la EXI Pro Detailing – detailing auto în Sibiu. Servicii profesionale interior & ceramică exterior.</p>
+    <p> <h2>EXI pro detailing – Detailing auto de încredere în Sibiu</h2>
+    <p>Ne-am format din respect pentru mașinile bine îngrijite și clienții care apreciază calitatea.  
+     La EXI pro detailing, fiecare intervenție este atent planificată și executată fără compromisuri.</p>
+    <p>Oferim servicii specializate de curățare interioară în profunzime și protecție ceramică pentru exterior (optional), folosind produse profesionale și proceduri testate în timp.</p>
+    <p>Lucrăm doar pe bază de programare. Fiecare mașină e tratată cu seriozitate, iar fiecare client cu respect.</p>
+    <p>În funcție de disponibilitate, ne putem deplasa și la domiciliul clientului, pentru anumite servicii de interior.  
+      Suntem flexibili și orientați spre confortul tău.</p>
   </main>
 
   <footer>
