--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+izarennnnnn<!DOCTYPE html>
 <html lang="ro">
 <head>
   <meta charset="UTF-8">
@@ -19,7 +19,7 @@
   <main>
     <h2>Prezentare</h2>
     <p>Bine ai venit la EXI Pro Detailing – detailing auto în Sibiu. Servicii profesionale interior & ceramică exterior.</p>
-    <p> <h2>EXI pro detailing – Detailing auto de încredere în Sibiu</h2>
+    <p> <h2>EXI pro detailing – Cosmetizare profesională</h2>
     <p>Ne-am format din respect pentru mașinile bine îngrijite și clienții care apreciază calitatea.  
      La EXI pro detailing, fiecare intervenție este atent planificată și executată fără compromisuri.</p>
     <p>Oferim servicii specializate de curățare interioară în profunzime și protecție ceramică pentru exterior (optional), folosind produse profesionale și proceduri testate în timp.</p>
