--- a/pachete.html
+++ b/pachete.html
@@ -18,13 +18,15 @@
 
   <main>
     <h2>Pachete Detailing</h2>
-    <p><strong>Interior complet:</strong> Curățare scaune + banchetă ,
-                                          bord + fete de ușă + praguri ,
-                                          mochete ,
-                                          geamuri + parpriz + lunetă ,
-                                          pedalier , igienizare instalație climă (ozonificare)
-                                          Scaunele se dau jos doar la cererea clientului.</p>
-    <p><strong>Exterior – protecție ceramică
+    <p><strong>Interior complet:</strong>
+      </p> · Curățare scaune + banchetă </p>
+      </p> · Bord + fete de ușă + praguri <p>
+      </p> · Tavă portbagaj + plafon + mochete <p>
+      </p> · Mochete + covorașe + geamuri + parpriz + lunetă <p>
+      </p> · Curățare și igienizare volan + schimbător + manetă frână de mână + pedalier</p>
+      </p> · Scaunele se dau jos doar la cererea clientului.</p>
+    <p><strong>Exterior:</strong>
+    </P>Pprotecție ceramică</P>
   </main>
 
   
