--- a/pachete.html
+++ b/pachete.html
@@ -26,7 +26,7 @@
       </p> · Curățare și igienizare volan + schimbător + manetă frână de mână + pedalier</p>
       </p> · Scaunele se dau jos doar la cererea clientului.</p>
     <p><strong>Exterior:</strong>
-    </P>Pprotecție ceramică</P>
+    </P>Protecție ceramică</P>
   </main>
 
   
