--- a/pachete.html
+++ b/pachete.html
@@ -21,9 +21,10 @@
     <p><strong>Interior complet:</strong>
       </p> · Curățare scaune + banchetă </p>
       </p> · Bord + fete de ușă + praguri <p>
-      </p> · Tavă portbagaj + plafon + mochete <p>
-      </p> · Mochete + covorașe + geamuri + parpriz + lunetă <p>
-      </p> · Curățare și igienizare volan + schimbător + manetă frână de mână + pedalier</p>
+      </p> · Tavă portbagaj + plafon + mochete +covorașe <p>
+      </p> · Geamuri + parpriz + lunetă <p>
+      </p> · Curățare și igienizare volan + schimbător + manetă frână de mână + pedalier </p>
+      </P> · Igienizare habitaclu si instalație climă </p>
       </p> · Scaunele se dau jos doar la cererea clientului.</p>
     <p><strong>Exterior:</strong>
     </P>Protecție ceramică</P>
