--- a/pachete.html
+++ b/pachete.html
@@ -24,7 +24,7 @@
       </p> · Tavă portbagaj + plafon + mochete +covorașe <p>
       </p> · Geamuri + parpriz + lunetă <p>
       </p> · Curățare și igienizare volan + schimbător + manetă frână de mână + pedalier </p>
-      </P> · Igienizare habitaclu si instalație climă </p>
+      </P> · Igienizare habitaclu și instalație climă </p>
       </p> · Scaunele se dau jos doar la cererea clientului.</p>
     <p><strong>Exterior:</strong>
     </P>Protecție ceramică</P>
