--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-izarennnnnn<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ro">
 <head>
   <meta charset="UTF-8">
@@ -7,7 +7,7 @@ izarennnnnn<!DOCTYPE html>
 </head>
 <body class="fundal">
   <header>
-    <h1>EXI pro detailing</h1>
+    <h1>EXI Pro Detailing</h1>
     <nav>
       <a href="index.html">Acasă</a>
       <a href="pachete.html">Pachete</a>
@@ -19,7 +19,7 @@ izarennnnnn<!DOCTYPE html>
   <main>
     <h2>Prezentare</h2>
     <p>Bine ai venit la EXI Pro Detailing – detailing auto în Sibiu. Servicii profesionale interior & ceramică exterior.</p>
-    <p> <h2>EXI pro detailing – Cosmetizare profesională</h2>
+    <p> <h2>EXI Pro Detailing – Cosmetizare profesională</h2>
     <p>Ne-am format din respect pentru mașinile bine îngrijite și clienții care apreciază calitatea.</p>
      <p></p>La EXI pro detailing, fiecare intervenție este atent planificată și executată fără compromisuri.</p>
     <p>Oferim servicii specializate de curățare interioară în profunzime și protecție ceramică pentru exterior (optional), folosind produse profesionale și proceduri testate în timp.</p>
