--- a/pachete.html
+++ b/pachete.html
@@ -27,7 +27,7 @@
       </P> · Igienizare habitaclu și instalație climă </p>
       </p> · Scaunele se dau jos doar la cererea clientului.</p>
     <p><strong>Exterior:</strong>
-    </P>Protecție ceramică</P>
+      </P> · Protecție ceramică</P>
   </main>
 
   
