--- a/pachete.html
+++ b/pachete.html
@@ -2,12 +2,12 @@
 <html lang="ro">
 <head>
   <meta charset="UTF-8">
-  <title>Pachete - EXI pro detailing</title>
+  <title>Pachete - EXI Pro Detailing</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="fundal">
   <header>
-    <h1>EXI pro detailing</h1>
+    <h1>EXI Pro Detailing</h1>
     <nav>
       <a href="index.html">Acasă</a>
       <a href="pachete.html">Pachete</a>
