--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="ro">
 <head>
   <meta charset="UTF-8">
-  <title>Contact - EXI pro detailing</title>
+  <title>Contact - EXI Pro Detailing</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="fundal">
@@ -19,6 +19,7 @@
   <main>
     <h2>Contact</h2>
     <p>📞 Telefon: <a href="tel:+40728242862">+40 728242862</a></p>
+    <p>📞 Telefon: <a href="tel:+40748020727">+40 748020727</a></p>
     <p>📍 Sibiu</p>
        <p>🎵 TikTok:  
       <a href="https://www.tiktok.com/@exiprodetailingsibiu?_t=ZN-8yAeOU1zXk6&_r=1" target="_blank" style="color: #1DA1F2;">
